# entitybase-orchestrator

./: .env.backup  .env.example  .gitignore  AGENTS.md  INSTALL.md  LIBS.yml  LICENSE  Makefile  PORTS.md  README.md  TESTING.md  clone-repos.sh  docker-compose.mysql.yml  docker-compose.shared_valkey.yml  docker-compose.yml  entitybase-backend  entitybase-frontend  entitybase-import  env.example  kafka2sse-backend  kafka2sse-frontend  mysql-health.sh  package.json  pyproject.toml
.github/workflows/: ci.yml  elastic-integration.yml  elastic-integration.yml.disabled  meilisearch-integration.yml
frontend/: .env.example  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json
frontend/.github/workflows/: ci.yml
frontend/src/: App.vue  style.css
frontend/src/components/: StatusCard.vue
frontend/src/composables/: useHealth.js
frontend/src/config/: services.js
frontend/tests/: App.test.js
scripts/: build-images.sh  check-kafka-topics.sh  check-services.sh  check_services.py  clone-repos.sh  create-test-items.sh  git-all.py  rebuild-container.sh  rebuild_containers.py  reset.sh  run-release.sh  setup.py  show-images.sh
scripts/health/: elasticsearch-health.sh  meilisearch-health.sh  mysql-health.sh  redpanda-health.sh  rustfs-health.sh  valkey-health.sh
