[tool.poetry]
name = "entitybase-orchestrator"
version = "0.1.0"
description = "Docker orchestration for Entitybase services"
authors = ["Entitybase Team"]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
